[tool.poetry]
name = "monitors4codegen"
version = "0.1.0"
urls = { "homepage" = "https://github.com/microsoft/monitors4codegen" }
description = "Code for running Monitor-Guided Decoding (https://github.com/microsoft/monitors4codegen) including multilspy: A language-agnostic LSP client in Python, with a library interface. Intended to be used to build applications around language servers. Currently multilspy supports language servers for Python, Rust, Java and C#."
authors = ["Lakshya A Agrawal <t-lakagrawal@microsoft.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "monitors4codegen", from = "src" }]
classifiers = [
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: C#",
    "Programming Language :: Java",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "*"
code-tokenize = "*"
code-ast = "*"
openai = "*"
torch = "*"
transformers = "*"
tiktoken = "*"
pygtrie = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
ruff-lsp = "^0.0.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
