# Read https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "monitors4codegen"
version = "0.0.1"
authors = [
  { name="Lakshya A Agrawal", email="t-lakagrawal@microsoft.com" },
]
description = "Code for running Monitor-Guided Decoding (https://github.com/microsoft/monitors4codegen) including multilspy: A language-agnostic LSP client in Python, with a library interface. Intended to be used to build applications around language servers. Currently multilspy supports language servers for Python, Rust, Java and C#."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Programming Language :: C#",
    "Programming Language :: Java",
    "Programming Language :: Python",
    "Programming Language :: Rust"
]

dependencies = [
  "jedi-language-server==0.41.1",
  "pydantic==1.10.5",
  "code-tokenize==0.2.0",
  "code-ast @ git+https://github.com/cedricrupb/code_ast@982940d04b1d721e5ac9a97d433f36d1fb47e8e0",
  "openai==1.3.3",
  "torch==1.12.0",
  "transformers==4.36.0",
  "tiktoken==0.3.3",
  "pygtrie==2.5.0"
]

[project.urls]
"Homepage" = "https://github.com/microsoft/monitors4codegen"
"Bug Tracker" = "https://github.com/microsoft/monitors4codegen/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
